# uvm

./: .editorconfig  .env.example  .env.prod.example  .gitignore  LICENSE  README.md  ROADMAP.md  SECURITY.md  bug.txt  cookies.txt  cspell.json  docker-compose.prod.yml  docker-compose.yml  error.txt  fix_all_templates.ps1  fix_templates.py  mark_all_done.py  pyproject.toml  pyrightconfig.json  pytest.ini  temp_phases_5_7.txt
.github/: copilot-instructions.md
.github/workflows/: django-deploy-check.yml
backend/app/: Dockerfile  (+7 more)
docs/: CODEX_PERFORMANCE_AUDIT.md  CODE_COMPLEXITY_ANALYSIS_REPORT.md  DATABASE_QUERY_OPTIMIZATION_REPORT.md  DEPENDENCY_AUDIT_RESULTS.md  DEPLOYMENT.md  DJANGO_BEST_PRACTICES_REPORT.md  LOCAL_VENV_SETUP.md  M14_NEBENKOSTENABRECHNUNG_FINAL.md  M8_ACCEPTANCE_TESTS.md  MASTER_ACTION_PLAN.md  MASTER_ACTION_PLAN_DONE.md  OPERATIONS_RUNBOOK.md  PERFORMANCE_BOTTLENECKS_REPORT.md  Portal_Properties_CRUD_and_Meters_1_1.md  Portal_Properties_Implementation_TODO.md  Portal_Units_Analysis_Review.md  Portal_Units_CRUD_and_Meters_1_0.md  README.md  SECURITY_COMPLIANCE_AUDIT.md  SECURITY_ENV_VARS.md  SENTRY_SETUP.md  Security_Fixes_2025_10_20.md  TEST_COVERAGE_GAPS_REPORT.md  Utility_Readings_Default_Meter_Prefill_1_2.md  codex_executive_summary.md  error.txt  pip_audit_report.json  safety_report.json  uvm_universal_vermieter_managment_SPEC_v_0_5_19_10.md
tests/: conftest.py  test_admin_issues_export_csv.py  test_admin_issues_export_sanitize.py  test_admin_tenants_erase_idempotent.py  test_admin_tenants_gdpr.py  test_chat_acceptance.py  test_chat_api.py
(+199 files in other folders)
