[project]
name = "uvm"
version = "0.1.0"
description = "Universal Vermieter Management (MVP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django==5.1.2",
  "djangorestframework==3.15.2",
  "psycopg[binary,pool]==3.2.3",
  "redis==5.0.8",
  "celery==5.4.0",
  "django-storages[boto3]==1.14.4",
  "boto3==1.34.162",
  "python-dotenv==1.0.1",
  "dj-database-url==2.2.0",
  "argon2-cffi==23.1.0",
  "gunicorn==22.0.0",
  "uvicorn==0.30.6",
  "pytest==8.2.1",
  "pytest-django==4.9.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP","DJ","RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py","test_*.py","*_tests.py"]
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B","UP","DJ","RUF"]
ignore = ["E501"]  # Zeilenlänge von Black geregelt

[tool.ruff.format]
quote-style = "double"
